kubernetes-ingress/kubernetes-service.yml
apiVersion: v1
kind: Service
metadata:
  name: portainer-service
spec:
  selector:
    app: portainer
  type: NodePort
  ports:
  - port: 80
    targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: rancher-service
spec:
  selector:
    app: rancher
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
